--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
-# Configuration file for SCVUIUv2
+# Configuration file for SCVUIUv3
 
 # Author: Teresita M. Porter
-# Date: Oct. 29, 2019
+# Date: Jan. 9, 2020
 
 ############################################################################
 # General pipeline settings
@@ -48,6 +48,8 @@ SEQPREP:
 ############################################################################
 
 # CUTADAPT parameters
+# fITS9 fungal forward primer (Ihrmark et al., 2012)
+# ITS4 fungal reverse primer (White et al., 1990)
 CUTADAPT_FWD:
     g: "GAACGCAGCRAANNGYGA"
     m: 150
@@ -60,7 +62,6 @@ CUTADAPT_REV:
     q: "20,20"
     mn: 3
 
-
 ############################################################################
 # Dereplication
 ############################################################################
@@ -69,13 +70,6 @@ CUTADAPT_REV:
 # For the standard pipeline, a good directory name would be the amplicon, ex. "18Sv4"
 dir: "ITS2"
 
-# VSEARCH params
-VSEARCH:
-# Indicate number of threads to use
-# Do not exceed the number of jobs allotted to run the whole pipeline ('jobs' above)
-    t: 24
-
-
 ############################################################################
 # Denoising
 ############################################################################
@@ -83,8 +77,18 @@ VSEARCH:
 # Indicate minimum number of reads per cluster to retain
 # Here, remove all singletons and doubletons, retain clusters with 3+ reads
 
-USEARCH:
+VSEARCH_DENOISE:
     minsize: 3
+
+############################################################################
+# ESV x sample table
+############################################################################
+
+# VSEARCH params
+VSEARCH_TABLE:
+# Indicate number of threads to use
+# Do not exceed the number of jobs allotted to run the whole pipeline ('jobs' above)
+    t: 24
 
 ############################################################################
 # Taxonomic assignment
@@ -93,7 +97,7 @@ USEARCH:
 # Uses the RDP classifier
 
 RDP:
-    jar: "/path/to/rdp_classifier_2.12/dist/classifier.jar"
+    jar: "/home/terri/rdp_classifier_2.12/dist/classifier.jar"
     g: "fungalits_unite"
 
 ############################################################################
